examples/test/testpolicy8779.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8779
  namespace: namespace264
spec:
  podSelector:
    matchLabels:
      key44: value7
      key16: value20
      key43: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value20
          key48: value43
          key11: value28
      podSelector:
        matchLabels:
          key18: value7
          key34: value28
          key37: value22
